--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <title>The way of the Samurai</title>
   </head>
