--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <title>Samuraii Test Account</title>
+    <title>React Sumurai Way</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
