--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,25 @@
       content="Web site created using create-react-app"
     />
 
+    <!-- Material UI -->
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
+    />
+
+    <!-- Material UI -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
     <title>React Sumurai Way</title>
