--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
-    <!-- Material UI -->
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/samurai.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -30,7 +28,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>React Sumurai Way</title>
+    <title>Sumurai Social Network</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
