changed .ico file name

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="icon" href="%PUBLIC_URL%/samurai.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Samurai.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
